; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/satisfaction75/extr_satisfaction75.c_dynamic_keymap_custom_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/satisfaction75/extr_satisfaction75.c_dynamic_keymap_custom_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DYNAMIC_KEYMAP_CUSTOM_BACKLIGHT = common dso_local global i64 0, align 8
@DYNAMIC_KEYMAP_MACRO_EEPROM_ADDR = common dso_local global i64 0, align 8
@DYNAMIC_KEYMAP_ENABLED_ENCODER_MODES = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dynamic_keymap_custom_reset() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = load i64, i64* @DYNAMIC_KEYMAP_CUSTOM_BACKLIGHT, align 8
  %4 = inttoptr i64 %3 to i8*
  store i8* %4, i8** %1, align 8
  %5 = load i64, i64* @DYNAMIC_KEYMAP_MACRO_EEPROM_ADDR, align 8
  %6 = inttoptr i64 %5 to i8*
  store i8* %6, i8** %2, align 8
  br label %7

7:                                                ; preds = %11, %0
  %8 = load i8*, i8** %1, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = icmp ne i8* %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %7
  %12 = load i8*, i8** %1, align 8
  %13 = call i32 @eeprom_update_byte(i8* %12, i32 0)
  %14 = load i8*, i8** %1, align 8
  %15 = getelementptr inbounds i8, i8* %14, i32 1
  store i8* %15, i8** %1, align 8
  br label %7

16:                                               ; preds = %7
  %17 = load i64, i64* @DYNAMIC_KEYMAP_ENABLED_ENCODER_MODES, align 8
  %18 = inttoptr i64 %17 to i8*
  %19 = call i32 @eeprom_update_byte(i8* %18, i32 31)
  ret void
}

declare dso_local i32 @eeprom_update_byte(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
